UI-3399 | Wrong GUI in space - Fix space title on IE9,IE10

--- a/webapp/resources/src/main/webapp/skin/less/social.less
+++ b/webapp/resources/src/main/webapp/skin/less/social.less
@@ -40,7 +40,7 @@
 					font-size: (@baseFontSize + 3);
 					.limitText {
 						display: block;
-						max-width: 99%;
+						max-width: 98%;
 					}
 				}
 				.ellipsis {
